# Siemens-Problem-Statement

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Problem_Statement.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  api.py  main.py  pdf_signer.py  renderSection2.py  renderSection3.py  renderSections.py  requirements.txt
api/engine/: attestationModel.html
api/templates/: dashboard.html  index.html  login.html  section3.html
api/templates/components/: attestationAlert.html  getAttestations.html  incompleteSectionAlert.html  showAttestations.html  showProducts.html
api/templates/components/newAttestationForm/: assignUser.html  chooseProduct.html
api/templates/components/newAttestationForm/sections/: section1.html  section2.html  section3.html
api/templates/engine/: attestationModel.html  attestationModelRedone.html
dockerfiles/: node-vue  python-flask
docs/: Diagrams.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  tailwind.css
frontend/src/assets/: base.css  main.css
frontend/src/components/: LoadingLayer.vue
frontend/src/router/: index.js
frontend/src/stores/: LeftNavMenuPinia.js  LoadingPinia.js  SessionPinia.js
frontend/src/views/: DashboardView.vue  LoginView.vue
temp/: ATTESTATION.sql  attestation_PRODUCT_VERSION.sql  attestation_PRODUCT_X_RESPONSIBLE_USER.sql  attestation_USERS.sql
