# pyproject.toml
[tool.black]
line-length = 88
target-version = ['py39','py310','py311']
include = '*.py'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[project]
name = "api"
description = "Lovely"
dependencies = [
	"flask","pyjwt","mysql-connector-python"
]
version="0.1.0"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
